--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
 
 :root {
   --primary-color: #233a95;
@@ -23,8 +23,8 @@ body {
 }
 
 .container {
-  max-width: 90% !important;
-  margin: 0 auto !important;
+  max-width: 90%;
+  margin: 0 auto;
 }
 
 .bg-purple {
@@ -32,6 +32,9 @@ body {
 }
 
 .headerWrapper {
+  border-bottom: 1px solid var(--border-color);
+  padding-bottom: 10px;
+
   .top-strip {
     padding: 8px 0;
 
@@ -55,23 +58,23 @@ body {
   width: 150px;
   height: 40px;
   text-align: left;
-  justify-content: flex-start !important;
-  color: var(--text-color) !important;
-  border: 1px solid var(--border-color) !important;
-  border-radius: 5px !important;
-  padding: 8px 12px !important;
+  justify-content: flex-start;
+  color: var(--text-color);
+  border: 1px solid var(--border-color);
+  border-radius: 5px;
+  padding: 8px 12px;
 
   .label {
-    font-size: var(--font-size-small) !important;
+    font-size: var(--font-size-small);
     text-transform: capitalize;
-    color: var(--text-light-color) !important;
+    color: var(--text-light-color);
     line-height: 14px;
   }
 
   .name {
-    font-size: var(--font-size-base) !important;
+    font-size: var(--font-size-base);
     text-transform: capitalize;
-    color: var(--primary-color) !important;
+    color: var(--primary-color);
     font-weight: 600;
     line-height: 14px;
   }
@@ -79,6 +82,10 @@ body {
   span.ml-auto svg {
     opacity: 0.7;
   }
+}
+
+.locationModal .MuiPaper-elevation {
+  padding: 25px;
 }
 
 header .headerSearch {
@@ -91,14 +98,14 @@ header .headerSearch {
   border: 1px solid var(--border-color);
 
   input {
-    background: transparent !important;
-    outline: none !important;
+    background: transparent;
+    outline: none;
     font-size: var(--font-size-base);
     color: rgba(0, 0, 0, 0.8);
     width: 100%;
     height: 30px;
-    border: none !important;
-    padding: 0 5px !important;
+    border: none;
+    padding: 0 5px;
   }
 
   button {
@@ -115,20 +122,21 @@ header .headerSearch {
 
 .part3 {
   .circle {
+    display: flex;
     align-items: center;
     justify-content: center;
-    min-width: 35px !important;
-    height: 35px !important;
-    border-radius: 50% !important;
-    border: 1px solid var(--border-color) !important;
+    min-width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    border: 1px solid var(--border-color);
   }
 
   .userIcon {
-    background-color: #fff !important;
+    background-color: #fff;
 
     svg {
-      font-size: var(--font-size-large) !important;
-      color: var(--text-color) !important;
+      font-size: var(--font-size-large);
+      color: var(--text-color);
     }
   }
 
@@ -139,7 +147,7 @@ header .headerSearch {
   }
 
   .cartTab .cartIconWrapper {
-    position: relative !important;
+    position: relative;
 
     .cartCount {
       position: absolute;
@@ -159,19 +167,60 @@ header .headerSearch {
 
   button {
     position: relative;
-    background-color: #ffd4ce !important;
-    font-size: var(--font-size-large) !important;
+    background-color: #ffd4ce;
+    font-size: var(--font-size-large);
 
     svg {
-      color: #ea2b0f !important;
+      color: #ea2b0f;
     }
   }
 }
 
+nav .navPart1 {
+  max-width: 20%;
+  flex: 0 0 20%;
+}
+
+nav .navPart2 {
+  max-width: 80%;
+  flex: 0 0 80%;
+}
+
+nav .navPart2 ul li {
+  position: relative;
+}
+
+nav .navPart2 ul li .subMenu {
+  border-radius: 5px;
+  position: absolute;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease-in-out;
+  top: 160%;
+  left: 0;
+  background-color: #fdfdfd; /* Changed to white */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Added box shadow */
+  min-width: 200px;
+  z-index: 100;
+}
+
+nav .navPart2 ul li .subMenu a{
+  border-radius: 0;
+display: block;
+width: 100%;
+border-bottom: 1px solid var(--border-color);
+
+}
+nav .navPart2 ul li:hover .subMenu{
+opacity: 1;
+visibility: inherit;
+top: 130%;
+}
+
 nav .allCatTab {
   background-color: #2bbef9;
-  border-radius: 30px !important;
-  padding: 8px 30px !important;
+  border-radius: 30px;
+  padding: 8px 15px;
 
   * {
     color: #fff;
@@ -182,36 +231,66 @@ nav .allCatTab {
   }
 
   .icon1 svg {
-    font-size: 20px !important;
+    font-size: 20px;
   }
 
   .icon2 svg {
-    font-size: 15px !important;
+    font-size: 15px;
   }
 }
 
 nav .navPart2 ul {
-  margin-bottom: 0 !important;
+  margin-bottom: 0;
 
   li a {
-    font-size: 16px !important;
-    font-weight: 600 !important;
-    text-decoration: none !important;
-    color: rgba(0, 0, 0, 0.7) !important;
-    text-transform: uppercase !important;
+    font-size: 16px;
+    font-weight: 600;
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.7);
+    text-transform: uppercase;
     display: flex;
     align-items: center;
-    padding: 8px 15px !important;
-    transition: 0.2s ease-in-out !important;
-    border-radius: 30px !important;
+    padding: 8px 13px;
+    transition: 0.2s ease-in-out;
+    border-radius: 30px;
 
     &:hover {
-      color: #2bbef9 !important;
-      background-color: #f0faff !important;
+      color: #2bbef9;
+      background-color: #f0faff;
     }
   }
 
   li svg {
-    font-size: 20px !important;
+    font-size: 20px;
   }
+}
+
+.locationModal ul {
+  padding-left: 0;
+  list-style: none;
+  scrollbar-gutter: 0;
+  overflow: hidden;
+}
+
+.locationModal ul li {
+  background-color: #fdfdfd;
+}
+
+.locationModal ul li:hover {
+  background-color: #eeeeee;
+}
+
+.locationItem {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px 5px;
+  border-bottom: 1px solid var(--border-color);
+  background-color: #f0f0f0;
+  width: 100%;
+  text-align: left;
+  font-size: 16px;
+  font-weight: 600;
+  color: var(--text-color);
+  cursor: pointer;
 }
