--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -60,7 +60,7 @@ body {
   text-align: left;
   justify-content: flex-start;
   color: var(--text-color);
-  border: 1px solid var(--border-color);
+  border: 1px solid var(--border-color) !important;
   border-radius: 5px;
   padding: 8px 12px;
 
@@ -181,6 +181,86 @@ nav .navPart1 {
   flex: 0 0 20%;
 }
 
+nav .navPart1 .catWrapper {
+  position: relative;
+}
+
+nav .navPart1 .catWrapper .sideBarNav {
+  position: absolute;
+  width: 100%;
+  height: 400px;
+  background-color: #fff;
+  top: 130%;
+  left: 0;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  /* Added box shadow */
+}
+
+.sideBarNav ul {
+  list-style: none;
+  padding: 0;
+}
+
+.sideBarNav>ul>li {
+  position: relative;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  li{
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+  }
+
+  a {
+    font-size: 16px;
+    font-weight: 600;
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.7);
+    text-transform: uppercase;
+    display: flex;
+    align-items: center;
+    padding: 8px 13px;
+    transition: 0.2s ease-in-out;
+    border-radius: 30px;
+    
+  }
+}
+
+.sideBarNav>ul>li>a {
+  font-size: 16px;
+  font-weight: 600;
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.7);
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  padding: 15px 13px;
+  transition: 0.2s ease-in-out;
+  border-radius: 30px;
+}
+
+
+
+.sideBarNav>ul>li:hover>ul {
+  display: block;
+  transition: left 0.5s ease-in-out, opacity 0.5s ease-in-out;
+  /* Updated transition properties */
+  left: 105%;
+  opacity: 1;
+  /* Ensure opacity is set for the transition */
+}
+
+.sideBarNav>ul>li>ul {
+  position: absolute;
+  left: 50%;
+  top: 0;
+  display: none;
+  opacity: 0;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  /* Set initial opacity for transition */
+  transition: opacity 0.5s ease-in-out;
+  /* Added transition for opacity */
+}
+
+
 nav .navPart2 {
   max-width: 80%;
   flex: 0 0 80%;
@@ -198,23 +278,25 @@ nav .navPart2 ul li .subMenu {
   transition: all 0.3s ease-in-out;
   top: 160%;
   left: 0;
-  background-color: #fdfdfd; /* Changed to white */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Added box shadow */
+  background-color: #fdfdfd;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  /* Added box shadow */
   min-width: 200px;
   z-index: 100;
 }
 
-nav .navPart2 ul li .subMenu a{
+nav .navPart2 ul li .subMenu a {
   border-radius: 0;
-display: block;
-width: 100%;
-border-bottom: 1px solid var(--border-color);
+  display: block;
+  width: 100%;
+  border-bottom: 1px solid var(--border-color);
 
 }
-nav .navPart2 ul li:hover .subMenu{
-opacity: 1;
-visibility: inherit;
-top: 130%;
+
+nav .navPart2 ul li:hover .subMenu {
+  opacity: 1;
+  visibility: inherit;
+  top: 130%;
 }
 
 nav .allCatTab {
